--- a/index.html
+++ b/index.html
@@ -9,6 +9,79 @@
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
   </head>
   <body>
-    <h1>Tell Us About You</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3 col-xs-12">
+          <h1 class="text-center">Tell Us About You</h1>
+          <form class="my-form" action="submit.php" enctype="multipart/form-data" method="GET">
+            <div class="form-group">
+              <label for="userName">Name</label>
+              <input type="text" class="form-control" placeholder="">
+            </div>
+
+            <p>
+              Gender
+            </p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="gender" value="male">Male
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="gender" value="female">Female
+              </label>
+            </div>
+
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" value="">
+            </div>
+
+            <div class="form-group">
+              <label>Check all the foods you like below:</label>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="tacos" value="yes">Tacos
+                </label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="fried-rice" value="yes">Fried rice</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="catfish" value="yes">Catfish</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="sandwiches" value="yes">Sandwiches</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="burgers" value="yes">Burgers</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="fries" value="yes">Fries</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>Which operating system do you use?</label>
+                <select class="form-control" name="operating-system">
+                  <option>Windows</option>
+                  <option>OSX</option>
+                  <option>Linux</option>
+                  <option>Plan 9</option>
+                  <option>Other</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+              <label>Do you have any questions?</label>
+                <textarea class="form-control" name="questions" rows="3"></textarea>
+            </div>
+
+            <button class="btn btn-default btn-block" type="submit">Submit</button>
+          </form>
+        </div>
+      </div><!-- /.row -->
+    </div><!-- /.container -->
   </body>
 </html>
